src/objects/AccountOpportunityRole__c.object
<CustomObject>
    <description>AccountOpportunityRole. Represents the TECHNICAL LANDSCAPE FOR THE PROJECT. Inspired by https://neo4j.lightning.force.com/lightning/r/organizer__ViewNodeMember__c/a7z3s0000004SCsAAM/view
MAINTENANCE:  DUPE DETECTION: for reporting cleanliness we use a Matching Rule + Duplicate Rule and as of 2020-03-06 the field it inspects is a compound key set by process builder therefore when adding new fields to the schema make sure to update that process builder.
PERMISSIONS: PermissionSets having description a7z3s0000004SCsAAM</description>
    <fields>
        <fullName>Cloud_Platform_for_Project_Deployment2__c</fullName>
        <formula>/*z_Cloud_Platform_for_Project_Deployment__r.Name*/ TEXT(Cloud_Platform_for_Project_Deployment__c)</formula>
        <label>Cloud Platform for Project Deployment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Platform_for_Project_Deployment__c</fullName>
        <inlineHelpText>Optional.  Choose the Account, if any, that is the Cloud Platform for the Project Deployment.</inlineHelpText>
        <label>Cloud Platform for Project Deployment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Google Cloud Platform</fullName>
                </value>
                <value>
                    <fullName>Amazon Web Services</fullName>
                </value>
                <value>
                    <fullName>Microsoft Azure</fullName>
                </value>
                <value>
                    <fullName>Alibaba Cloud</fullName>
                </value>
                <value>
                    <fullName>Baidu Cloud</fullName>
                </value>
                <value>
                    <fullName>Pivotal/ VMware</fullName>
                </value>
                <value>
                    <fullName>Openshift</fullName>
                </value>
                <value>
                    <fullName>Oracle Cloud</fullName>
                </value>
                <value>
                    <fullName>IBM Cloud</fullName>
                </value>
                <value>
                    <fullName>Digital Ocean</fullName>
                </value>
                <value>
                    <fullName>OVH</fullName>
                </value>
                <value>
                    <fullName>HostEurope</fullName>
                </value>
                <value>
                    <fullName>NTT Global Data Centers</fullName>
                </value>
                <value>
                    <fullName>T-Systems</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compound_Key__c</fullName>
        <description>For duplicate prevention. This is a concatenated value from both master lookups, and other data values.  Worksaround salesforce limitation &quot;Error: A matching rule can have only one lookup relationship field&quot; (https://success.salesforce.com/ideaView?id=08730000000Dl8OAAS)</description>
        <inlineHelpText>For duplicate prevention. This is a concatenated value from both master lookups, and other data values.  Worksaround salesforce limitation &quot;Error: A matching rule can have only one lookup relationship field&quot; (https://success.salesforce.com/ideaView?id=087</inlineHelpText>
        <label>Compound Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>On_premise_deployment2__c</fullName>
        <description>Picklist is better than checkbox because I cannot validate null on a checkbox, and this will sometimes rightfully be null.</description>
        <label>On-premise deployment?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_premise_deployment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark this if its considered an &quot;on-premise&quot; deployment.</inlineHelpText>
        <label>deprecated.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>accountOpportunityRoles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Other_Detail__c</fullName>
        <description>a7z3s0000000NolAAE</description>
        <inlineHelpText>Other (to be used if Cloud platform or integration is not found on fixed list)</inlineHelpText>
        <label>Other Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tech_Company_the_integration_connects_to__c</fullName>
        <description>a7z3s0000000NolAAE</description>
        <inlineHelpText>Which technology company is the used-integration connecting to? If multiple integrations then please create multiple Technology Involved records.</inlineHelpText>
        <label>Tech Company the integration connects to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AWS Kafka</fullName>
                </value>
                <value>
                    <fullName>Azure Kafka</fullName>
                </value>
                <value>
                    <fullName>Confluent</fullName>
                </value>
                <value>
                    <fullName>Databricks</fullName>
                </value>
                <value>
                    <fullName>Dataiku</fullName>
                </value>
                <value>
                    <fullName>H2O.AI</fullName>
                </value>
                <value>
                    <fullName>Looker</fullName>
                </value>
                <value>
                    <fullName>Microstrategy</fullName>
                </value>
                <value>
                    <fullName>Tableau</fullName>
                </value>
                <value>
                    <fullName>Thales</fullName>
                </value>
                <value>
                    <fullName>ThoughtSpot</fullName>
                </value>
                <value>
                    <fullName>Tibco Spotfire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_ISV_Integration_is_used__c</fullName>
        <label>ISV Integration used</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ISV_Integrations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>test_development_only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Project Lead Logan describes this in https://neo4j.slack.com/archives/DRX1ZQD7F/p1583447052014600
permissions for this and a7z3s0000004SCsAAM are done by permission set.</description>
        <inlineHelpText>check this box if the cloud deployment is limited to test/ dev of the system</inlineHelpText>
        <label>test &amp; development only</label>
        <type>Checkbox</type>
    </fields>
    <label>Technology Involved</label>
    <nameField>
        <displayFormat>AOR-{0000}</displayFormat>
        <label>Relevant Technology Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technologies Involved</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>cloud_platform_is_req_if_onprem_is_no</fullName>
        <active>true</active>
        <description>If “On-premise” (On_premise_deployment__c) is No then require “cloud platform…” field</description>
        <errorConditionFormula>AND(
isblank(TEXT(Cloud_Platform_for_Project_Deployment__c )),
 ISPICKVAL(On_premise_deployment2__c, &quot;No&quot;)
)</errorConditionFormula>
        <errorDisplayField>Cloud_Platform_for_Project_Deployment__c</errorDisplayField>
        <errorMessage>Please input [Cloud Platform for Project Deployment].   (  [Cloud Platform for Project Deployment] is required when [On-premise deployment] is NO. )</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dep_cloud_platform_is_req_if_onprem_is_0</fullName>
        <active>false</active>
        <description>Can you make it so that if “On-premise” (On_premise_deployment__c) is checked that satisfies the mandatory “cloud platform…” field (Cloud_Platform_for_Project_Deployment__c)?</description>
        <errorConditionFormula>AND(
isblank( z_Cloud_Platform_for_Project_Deployment__c ),
NOT(On_premise_deployment__c)
)</errorConditionFormula>
        <errorMessage>Please input [Cloud Platform for Project Deployment].   (  [Cloud Platform for Project Deployment] is required when [On-premise deployment] is unchecked. )</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>req_other_detail_if_cloud_plat_is_other</fullName>
        <active>true</active>
        <description>a7z3s0000000NolAAE</description>
        <errorConditionFormula>if(and(
ISPICKVAL(  Cloud_Platform_for_Project_Deployment__c , &quot;other&quot;),
isblank( Other_Detail__c )
),true,false)</errorConditionFormula>
        <errorDisplayField>Other_Detail__c</errorDisplayField>
        <errorMessage>[Other Detail] is required when [Cloud Platform for Project Deployment] is &quot;other&quot;.</errorMessage>
    </validationRules>
</CustomObject>